--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.edentech.beercounter</groupId>
-  <artifactId>beer-counter</artifactId>
+  <groupId>com.edentech.foodpyramid</groupId>
+  <artifactId>food-pyramid</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <name>beer-counter</name>
+  <name>foodpyramid</name>
   <url>http://maven.apache.org</url>
     <dependencies>
         <dependency>
@@ -23,6 +23,12 @@
             <artifactId>commons-csv</artifactId>
             <version>1.1</version>
         </dependency>
+        <dependency>
+            <groupId>jdom</groupId>
+            <artifactId>jdom</artifactId>
+            <version>1.1</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
